# dbl-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HOOK_QUICKREF.md  Install-DBLHook.ps1  README.md  compose.yaml  constraints-ci.txt  pyproject.toml  run_demo.ps1
.github/workflows/: tests.yml
config/: boundary.demo.json  boundary.json  boundary.operator.json  boundary.public.json  boundary.schema.json  context.json  context.schema.json
docs/: ARCHITECTURE.md  CAPABILITIES.md  CONSTITUTION.md  CONTEXT.md  CONTRACT_BOUNDARY.md  EMPIRICAL_VALIDATION.md  FIRST_INTEGRATION.md  GIT_HOOKS.md  HOOKS.md  HOOK_SUMMARY.md  INTEGRATION_SLICE.md  INVARIANTS.md  MANIFEST.md  OIDC_INTEGRATION.md  QUICKSTART.md  VALIDATION.md  admission_and_rejection.md  capabilities.README.md  capabilities.gateway.v1.json  capabilities.gateway.v3.json  demo.md  dependency_surface.md  discovery.md  env_contract.md  llm_call_contract.md  observer.md  repro_local.md  stabilization_stack_map.md  wire_contract.md
docs/internal/: GOALS.md  admission_and_rejection.md  capabilities.README.md
scripts/: bench_replay.py  demo_agent.py  generate_capabilities.py
src/dbl_gateway/: __init__.py  admission.py  app.py  auth.py  capabilities.py  client.py  config.py  context_builder.py  contracts.py  decision_builder.py  demo_agent.py  digest.py  event_builder.py  job_router.py  models.py  ref_resolver.py  replay.py  trail_store_sqlite.py  wire_contract.py
src/dbl_gateway/adapters/: __init__.py  execution_adapter_kl.py  policy_adapter_dbl_policy.py  store_adapter_sqlite.py
src/dbl_gateway/ports/: execution_port.py  policy_port.py  store_port.py
src/dbl_gateway/providers/: __init__.py  anthropic.py  contract.py  ollama.py  openai.py  stub.py
src/dbl_gateway/rendering/: __init__.py  models.py  renderer.py
src/dbl_gateway/static/: index.html
src/dbl_gateway/store/: __init__.py  base.py  (+3 more)
tests/: policy_raises.py  policy_stub.py  test_auth_identity.py  test_budget_constraint.py  test_capabilities_generation.py  test_chain_of_record.py  test_client.py  test_config.py  test_context_auto.py  test_context_gate.py  test_decision_config_digest.py  test_decision_replay.py  test_digests_normative.py  test_gateway.py  test_normative_v3.py  test_observer_ui.py  test_provider_contract.py  test_providers_unit.py  test_ref_resolution.py  test_render_delta_v1.py  test_schema_snapshot.py  test_stub_provider.py  test_surface_exposure.py  test_timeline.py  test_tool_gating.py  test_wire_contract_v3.py
tests/fixtures/: openapi_snapshot.json
tools/: refresh_inventory.py
(+1 files in other folders)
